- Modificações em repositorio para queries - Pesquisa de videos por texto - Pesquisa de videos por categoria - Modificação em README, openapi_doc e definição psotman
