# Allura.Challenge.BackEnd/Routes/Categories.cs
@@ -21,12 +21,14 @@ namespace Allura.Challenge.BackEnd.Routes
     public class Categories
     {
         private ICategoryService CategoryService { get; }
+        private IMovieService MovieService { get; }
 
-        public Categories(ICategoryService categoryService)
+        public Categories(ICategoryService categoryService, IMovieService movieService)
         {
             CategoryService = categoryService;
+            MovieService = movieService;
         }
-        
+
         [OpenApiOperation("Get Category", "Get", Summary = "Get Category", Description = "Gets a Category from the database", Visibility = OpenApiVisibilityType.Important)]
         [OpenApiParameter("id", In = ParameterLocation.Path, Required = true, Type = typeof(string))]
         [OpenApiResponseWithBody(HttpStatusCode.OK, "application/json", typeof(CategoryResponse))]
@@ -48,7 +50,7 @@ namespace Allura.Challenge.BackEnd.Routes
                 return new JsonResult(e.Message) {StatusCode = 500};
             }
         }
-        
+
         [OpenApiOperation("Get Categories", "Get", Summary = "Get Categories", Description = "Gets all Categories from the database", Visibility = OpenApiVisibilityType.Important)]
         [OpenApiResponseWithBody(HttpStatusCode.OK, "application/json", typeof(List<CategoryResponse>))]
         [FunctionName(nameof(Categories) + nameof(GetAll))]
@@ -59,6 +61,28 @@ namespace Allura.Challenge.BackEnd.Routes
             {
                 var category = await CategoryService.GetCategories();
                 return new JsonResult(category.GetAs<List<CategoryResponse>>());
+            }
+            catch (Domain.Exceptions.GenericException e)
+            {
+                return new JsonResult(e.Message) {StatusCode = e.StatusCode};
+            }
+            catch (System.Exception e)
+            {
+                return new JsonResult(e.Message) {StatusCode = 500};
+            }
+        }
+
+        [OpenApiOperation("Get by Category", "Get", Summary = "Get Movies by Category", Description = "Gets Movies by Category from the database", Visibility = OpenApiVisibilityType.Important)]
+        [OpenApiParameter("id", In = ParameterLocation.Path, Required = true, Type = typeof(string))]
+        [OpenApiResponseWithBody(HttpStatusCode.OK, "application/json", typeof(MovieByCategoryResponse))]
+        [FunctionName(nameof(Categories) + nameof(GetAllByCategory))]
+        public async Task<IActionResult> GetAllByCategory([HttpTrigger(AuthorizationLevel.Function, "get", Route = "categorias/{id}/videos")]
+            HttpRequest req, string id, ILogger log)
+        {
+            try
+            {
+                var moviesByCategory = await MovieService.GetMoviesByCategory(id);
+                return new JsonResult(new MovieByCategoryResponse {Movies = moviesByCategory.GetAs<List<MovieResponse>>()});
             }
             catch (Domain.Exceptions.GenericException e)
             {
@@ -93,7 +117,7 @@ namespace Allura.Challenge.BackEnd.Routes
                 return new JsonResult(e.Message) {StatusCode = 500};
             }
         }
-        
+
         [OpenApiOperation("Update Category", "Update", Summary = "Update Category", Description = "Updates a Category from the database", Visibility = OpenApiVisibilityType.Important)]
         [OpenApiParameter("id", In = ParameterLocation.Path, Required = true, Type = typeof(string))]
         [OpenApiRequestBody("application/json", typeof(CategoryRequest), Required = true)]
@@ -118,7 +142,7 @@ namespace Allura.Challenge.BackEnd.Routes
                 return new JsonResult(e.Message) {StatusCode = 500};
             }
         }
-        
+
         [OpenApiOperation("Delete Category", "Delete", Summary = "Deletes Category", Description = "Deletes a Category from the database", Visibility = OpenApiVisibilityType.Important)]
         [OpenApiParameter("id", In = ParameterLocation.Path, Required = true, Type = typeof(string))]
         [OpenApiResponseWithBody(HttpStatusCode.OK, "application/json", typeof(OkResult))]
