# Allura.Challenge.Domain/Models/Requests/MovieRequest.cs
@@ -7,6 +7,6 @@ namespace Allura.Challenge.Domain.Models.Requests
         [JsonProperty("titulo")] public string Title { get; set; }
         [JsonProperty("descricao")] public string Description { get; set; }
         [JsonProperty("url")] public string Url { get; set; }
-        [JsonProperty("categoria")] public string Category { get; set; }
+        [JsonProperty("categoriaId")] public string Category { get; set; }
     }
 }
