# Allura.Challenge.Domain/Models/Responses/MovieResponse.cs
@@ -8,6 +8,6 @@ namespace Allura.Challenge.Domain.Models.Responses
         [JsonProperty("titulo")] public string Title { get; set; }
         [JsonProperty("descricao")] public string Description { get; set; }
         [JsonProperty("url")] public string Url { get; set; }
-        [JsonProperty("categoria")] public string Category { get; set; }
+        [JsonProperty("categoriaId")] public string Category { get; set; }
     }
 }
